<resources>
    <string name="app_name">FoodDelivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">Москва</string>
    <string name="filter_pizza">Пицца</string>
    <string name="price">от 345 р</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="cart">Корзина</string>
    <string name="meal_info">Суп харчо - традиционное блюдо грузинской кухни, острый суп на говяжьем бульоне, наваристый и сытный, с пикантным вкусом. Именно грецкие орехи придают этому замечательному супу такой необычный, незабываемый вкус, в сочетании с томатной заправкой и чесноком, суп получается очень ароматным. А говяжий бульон сделает суп полезным и вкусным.</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="all">Все</string>
    <string name="serving_count_title">Количество порций</string>
    <string name="recipe_title">Пошаговый рецепт</string>
    <string name="subscription_title">Расширенная подписка</string>
    <string name="subscription_description">Оформите подписку \nдля больших возможностей</string>
    <string name="try_subscription_button">Попробовать бесплатно</string>
    <string name="catalog_action_text">Что будете готовить сегодня?</string>
    <string name="catalog_fragment_greetings">Добрый день</string>
    <string name="catalog_recommendations_action_text">Вам понравилось</string>
    <string name="search_field_hint">Поиск</string>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Питербург</item>
        <item>Екатеринбург</item>
        <item>Тюмень</item>
        <item>Красноярск</item>
    </string-array>
</resources>