<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/subscriptionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/subscription_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
        />


        <TextView
            android:id="@+id/subscriptionDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/subscription_description"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscriptionTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subscriptionButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/try_subscription_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/subscriptionDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="0dp">

        </androidx.appcompat.widget.AppCompatButton>



        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sub_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>