<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/subscriptionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:elevation="1dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/subscription_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/subscriptionDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:elevation="1dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/subscription_description"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subscriptionTitle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/subscriptionButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/try_subscription_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subscriptionDescription"
                    tools:layout_editor_absoluteX="0dp">

                </androidx.appcompat.widget.AppCompatButton>


                <ImageView
                    android:id="@+id/banner_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sub_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/see_all_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/catalog_action_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/action_arrow"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shimmer_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/see_all_meals"
            tools:listitem="@layout/shimmer_filter_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/see_all_meals"
            tools:listitem="@layout/filters_item"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="invisible"
            android:id="@+id/rv_shimmer_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            tools:listitem="@layout/shimmer_dishes_item_new"
            tools:itemCount="4"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_shimmer_filters"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            tools:listitem="@layout/dishes_item"
            tools:itemCount="3"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginTop="16dp"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_shimmer_filters"
            />



        <TextView
            android:id="@+id/favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/catalog_recommendations_action_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/action_arrow"
            app:layout_constraintTop_toBottomOf="@+id/rv_shimmer_catalog"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fav_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            tools:listitem="@layout/dishes_item"
            tools:itemCount="3"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginTop="12dp"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorites"
            />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/main_content_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="see_all_meals, rv_filters,
                rv_catalog, favorites, fav_catalog"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

